docs(readme): readme文件新增打包分类

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-VUE_APP_BASE_URL = http://127.0.0.1
+ENV = 'development'
+VUE_APP_BASE_URL = http://localhost
+VUE_CLI_BABEL_TRANSPILE_MODULES = true
